--- a/libmaxminddb.yaml
+++ b/libmaxminddb.yaml
@@ -1,7 +1,7 @@
 package:
   name: libmaxminddb
   version: "1.12.2"
-  epoch: 0
+  epoch: 1
   description: Maxmind GeoIP2 database library
   copyright:
     - license: Apache-2.0
@@ -47,6 +47,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libmaxminddb-dev
 
   - name: libmaxminddb-doc
     pipeline:
@@ -63,7 +66,7 @@ subpackages:
           mv ${{targets.destdir}}/usr/lib/libmaxminddb.so.* ${{targets.subpkgdir}}/usr/lib/
     test:
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
     description: libmaxminddb libs
