--- a/libmemcached.yaml
+++ b/libmemcached.yaml
@@ -1,7 +1,7 @@
 package:
   name: libmemcached
   version: 1.1.4
-  epoch: 2
+  epoch: 3
   description: Client library and command line tools for memcached server (resurrected)
   copyright:
     - license: BSD-3-Clause
@@ -52,6 +52,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libmemcached-dev
     dependencies:
       runtime:
         - libmemcached
