Add the ldd-check test to libmspack

--- a/libmspack.yaml
+++ b/libmspack.yaml
@@ -2,7 +2,7 @@
 package:
   name: libmspack
   version: 0.11_alpha
-  epoch: 1
+  epoch: 2
   description: Library for Microsoft CAB compression formats
   copyright:
     - license: LGPL-2.1-only
@@ -37,6 +37,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libmspack-dev
     dependencies:
       runtime:
         - libmspack
