--- a/apache-tika-3.0.yaml
+++ b/apache-tika-3.0.yaml
@@ -67,15 +67,28 @@ test:
         - ${{package.name}}-compat
         - openjdk-17-default-jvm
   pipeline:
-    - name: "start server and verify endpoint"
-      runs: |
-        (
-        java -jar /tika-server-standard.jar &
-        ) && \
-        sleep 2 && \
-        curl -s http://localhost:9998/ | \
-        grep "<h1>Welcome to the Apache Tika 3.0.0 Server</h1>" && \
-        sleep 2 && \
-        echo "this is a test file!" > sample.txt && \
-        curl -X PUT --data-binary @sample.txt -H "Content-Type: text/plain" http://localhost:9998/tika | \
-        grep "this is a test file!"
+    - uses: test/daemon-check-output
+      with:
+        start: java -jar /tika-server-standard.jar
+        expected_output: |
+          Started Apache Tika server
+        post: |
+          fail() { echo "FATAL: $*"; exit 1; }
+          tmpd=$(mktemp -d)
+          trap "rm -Rf $tmpd" EXIT
+
+          url=http://localhost:9998/
+          curl -s "$url" > "$tmpd/req.out" 2>"$tmpd/req.err" ||
+              fail "[$?] curl -s $url"
+          grep -q "Welcome to the Apache Tika" "$tmpd/req.out" ||
+              fail "curl $url - no Welcome message"
+
+          msg="this is a test file"
+          echo "$msg" > "$tmpd/sample.txt" ||
+              fail "failed writing a file"
+          curl -X PUT --data-binary "@$tmpd/sample.txt" \
+              -H "Content-Type: text/plain" "http://localhost:9998/tika" \
+              > "$tmpd/post.out" ||
+              fail "failed PUT to curl $url/tika"
+          grep -q "$msg" "$tmpd/post.out" ||
+              fail "did not find $msg in output of PUT"
