--- a/libnet.yaml
+++ b/libnet.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnet
   version: "1.3"
-  epoch: 3
+  epoch: 4
   description: A generic networking API that provides access to several protocols
   copyright:
     - license: BSD-2-Clause
@@ -57,6 +57,9 @@ subpackages:
             libnet-config --version
             libnet-config --help
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libnet-dev
 
 update:
   enabled: true
