--- a/libnetfilter_cttimeout.yaml
+++ b/libnetfilter_cttimeout.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnetfilter_cttimeout
   version: "1.0.1"
-  epoch: 4
+  epoch: 5
   description: Library for the connection tracking timeout infrastructure
   copyright:
     - license: GPL-2.0-or-later
@@ -35,6 +35,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libnetfilter_cttimeout-dev
 
 update:
   enabled: true
