--- a/libnl3.yaml
+++ b/libnl3.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnl3
   version: 3.11.0
-  epoch: 2
+  epoch: 3
   description: Library for applications dealing with netlink sockets
   copyright:
     - license: LGPL-2.1-or-later
@@ -68,6 +68,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libnl3-dev
 
   - name: libnl3-doc
     description: libnl3 docs
