--- a/coreutils.yaml
+++ b/coreutils.yaml
@@ -1,14 +1,18 @@
 package:
   name: coreutils
   version: "9.6"
-  epoch: 0
+  epoch: 30
   description: "GNU core utilities"
   copyright:
     - license: GPL-3.0-or-later
   scriptlets:
     post-deinstall: |
-      #!/bin/busybox sh
-      /bin/busybox --install -s
+      #!/usr/bin/busybox sh
+      /usr/bin/busybox --install -s
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -53,21 +57,8 @@ pipeline:
       rm -rf usr/lib/charset.alias
       rmdir -p usr/lib 2>/dev/null || true
 
-      install -d bin usr/sbin
-
-      # Move things around to match busybox locations
-      for i in base64 cat chgrp chmod chown cp date dd df echo false ln ls mkdir mknod mktemp mv nice printenv pwd rm rmdir sleep stat stty sync touch true uname; do
-        rm usr/bin/$i
-        ln -s ../usr/bin/coreutils bin/$i
-      done
-
-      # Busybox doesn't have these, but coreutils does.
-      for i in chroot env nohup stdbuf timeout; do
-        ln -s ../usr/bin/coreutils bin/$i
-      done
-
-      rm usr/bin/chroot
-      ln -s ../bin/coreutils usr/sbin/chroot
+      # busybox chroot
+      rm -f usr/sbin/chroot
 
       # shouldn't be here, but you never know...
       rm -f usr/bin/groups
@@ -81,6 +72,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: "coreutils-legacy"
     description: "legacy GNU coreutils"
@@ -89,6 +84,10 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/bin/md5sum "${{targets.subpkgdir}}"/usr/bin
           mv "${{targets.destdir}}"/usr/bin/sha1sum "${{targets.subpkgdir}}"/usr/bin
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
