--- a/libsepol.yaml
+++ b/libsepol.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsepol
   version: "3.8"
-  epoch: 1
+  epoch: 2
   description: "SELinux binary policy manipulation library"
   copyright:
     - license: LGPL-2.1
@@ -35,6 +35,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libsepol-dev
 
 update:
   enabled: true
