use destdir to copy contents to /app
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -319,8 +319,8 @@ subpackages:
       - name: Copy HTML to /app
         runs: |
           mkdir -p ${{targets.contextdir}}/app
-          ln -sf /home/build/melange-out/${{package.name}}/var/lib/nginx/html/50x.html ${{targets.contextdir}}/app
-          ln -sf /home/build/melange-out/${{package.name}}/var/lib/nginx/html/index.html ${{targets.contextdir}}/app
+          cp ${{targets.destdir}}/var/lib/nginx/html/50x.html ${{targets.contextdir}}/app
+          cp ${{targets.destdir}}/var/lib/nginx/html/index.html ${{targets.contextdir}}/app
     test:
       environment:
         contents:
@@ -328,13 +328,13 @@ subpackages:
             - ${{package.name}}-config
             - ${{package.name}}-config-compat
             - curl
-            - crane
             - shadow
             - sudo-rs
             - wait-for-it
       pipeline:
         - working-directory: /app
           pipeline:
+            # using accounts to create user fails in CI
             - name: Create Nginx user and directories
               runs: |
                 adduser -D -g 'Nginx User' nginx
