--- a/libsm.yaml
+++ b/libsm.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsm
   version: 1.2.5
-  epoch: 0
+  epoch: 1
   description: X11 Session Management library
   copyright:
     - license: MIT
@@ -62,6 +62,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libsm-dev
 
   - name: libsm-doc
     pipeline:
@@ -69,6 +72,9 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}/usr/share"
           mv "${{targets.destdir}}/usr/share/doc" "${{targets.subpkgdir}}/usr/share"
     description: libsm manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
