--- a/libspatialindex.yaml
+++ b/libspatialindex.yaml
@@ -1,7 +1,7 @@
 package:
   name: libspatialindex
   version: 2.1.0
-  epoch: 0
+  epoch: 1
   description: "C++ implementation of R*-tree, an MVR-tree and a TPR-tree with C API"
   copyright:
     - license: MIT
@@ -38,6 +38,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libspatialindex-dev
 
 test:
   environment:
