--- a/libtasn1.yaml
+++ b/libtasn1.yaml
@@ -1,7 +1,7 @@
 package:
   name: libtasn1
   version: "4.20.0"
-  epoch: 0
+  epoch: 1
   description: The ASN.1 library used in GNUTLS
   copyright:
     - license: LGPL-2.1-or-later
@@ -44,6 +44,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libtasn1-dev
 
   - name: libtasn1-doc
     pipeline:
