--- a/libtermkey.yaml
+++ b/libtermkey.yaml
@@ -1,7 +1,7 @@
 package:
   name: libtermkey
   version: "0.22"
-  epoch: 3
+  epoch: 4
   description: "Library for easy processing of keyboard entry from terminal-based programs"
   copyright:
     - license: MIT
@@ -42,6 +42,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libtermkey-dev
 
 update:
   enabled: true
