ruby3.4-rack: add basic functional test

--- a/ruby3.4-rack.yaml
+++ b/ruby3.4-rack.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby3.4-rack
   version: "3.1.11"
-  epoch: 0
+  epoch: 1
   description: Rack provides a minimal, modular and adaptable interface for developing web applications in Ruby
   copyright:
     - license: MIT
@@ -38,10 +38,27 @@ vars:
   gem: rack
 
 test:
+  environment:
+    contents:
+      packages:
+        - curl
+        - ruby${{vars.rubyMM}}-rackup
+        - ruby${{vars.rubyMM}}-puma
   pipeline:
     - uses: ruby/require
       with:
         module_name: ${{vars.gem}}
+    - runs: |
+        cat << EOF > config.ru
+        run do |env|
+          [200, {}, ["Hello World"]]
+        end
+        EOF
+
+        rackup &
+        sleep 1
+
+        curl http://localhost:9292 | grep -q "Hello World"
 
 update:
   enabled: true
