--- a/libutempter.yaml
+++ b/libutempter.yaml
@@ -1,7 +1,7 @@
 package:
   name: libutempter
   version: 1.2.3
-  epoch: 0
+  epoch: 1
   description: Library interface to record user sessions in utmp/wtmp files
   copyright:
     - license: LGPL-2.1-or-later
@@ -42,6 +42,11 @@ subpackages:
       runtime:
         - libutempter
     description: libutempter dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: libutempter-dev
 
   - name: libutempter-doc
     pipeline:
