added docker-entrypoint-initdb.d/ and removed run-as in test so hopefully CI will pass
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -96,6 +96,8 @@ subpackages:
 
           mkdir -p ${{targets.subpkgdir}}/bitnami/influxdb
           chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/bitnami/influxdb
+
+          mkdir -p ${{targets.subpkgdir}}/docker-entrypoint-initdb.d/
     test:
       environment:
         environment:
@@ -105,7 +107,6 @@ subpackages:
             - username: influxdb
               gid: 1000
               uid: 1000
-          run-as: 1000
       pipeline:
         - name: version tests
           runs: |
