--- a/libvncserver.yaml
+++ b/libvncserver.yaml
@@ -1,7 +1,7 @@
 package:
   name: libvncserver
   version: 0.9.15
-  epoch: 0
+  epoch: 1
   description: Library to make writing a vnc server easy
   copyright:
     - license: GPL-2.0-or-later
@@ -68,6 +68,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libvncserver-dev
 
 update:
   enabled: true
