--- a/libvorbis.yaml
+++ b/libvorbis.yaml
@@ -1,7 +1,7 @@
 package:
   name: libvorbis
   version: 1.3.7
-  epoch: 4
+  epoch: 5
   description: Vorbis codec library
   copyright:
     - license: BSD-3-Clause
@@ -50,6 +50,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libvorbis-dev
     description: ${{package.name}} dev
     dependencies:
       runtime:
