--- a/libwebp.yaml
+++ b/libwebp.yaml
@@ -1,7 +1,7 @@
 package:
   name: libwebp
   version: 1.5.0
-  epoch: 0
+  epoch: 1
   description: Libraries for working with WebP images
   copyright:
     - license: BSD-3-Clause
@@ -52,6 +52,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libwebp-dev
 
   - name: libwebp-doc
     pipeline:
