--- a/libwebsockets.yaml
+++ b/libwebsockets.yaml
@@ -1,7 +1,7 @@
 package:
   name: libwebsockets
   version: "4.3.5"
-  epoch: 0
+  epoch: 1
   description: C library for lightweight websocket clients and servers
   copyright:
     - license: MIT
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libwebsockets-dev
 
   - name: libwebsockets-test
     pipeline:
