use 9.0.103 to correct scanners prevents false positives
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/dotnet-9.yaml
+++ b/dotnet-9.yaml
@@ -1,6 +1,6 @@
 package:
   name: dotnet-9
-  version: 9.0.2
+  version: 9.0.103
   epoch: 0
   description: ".NET SDK"
   copyright:
@@ -11,6 +11,9 @@ package:
   dependencies:
     runtime:
       - icu
+
+vars:
+  tag: v9.0.2
 
 environment:
   environment:
@@ -50,7 +53,7 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/dotnet/dotnet
-      tag: v${{package.version}}
+      tag: ${{vars.tag}}
       expected-commit: c4e5fd73fe5d8c004bf46cb4f1ded77ca8124b1a
       destination: /home/build/src
 
@@ -172,7 +175,7 @@ subpackages:
 update:
   enabled: true
   github:
-    identifier: dotnet/core
+    identifier: dotnet/dotnet
     strip-prefix: v
     use-tag: true
     tag-filter: "v9"
