--- a/libxau.yaml
+++ b/libxau.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxau
   version: 1.0.12
-  epoch: 0
+  epoch: 1
   description: X11 authorisation library
   copyright:
     - license: MIT
@@ -50,6 +50,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxau-dev
 
   - name: libxau-doc
     pipeline:
