--- a/libxcb.yaml
+++ b/libxcb.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxcb
   version: 1.17.0
-  epoch: 4
+  epoch: 5
   description: X11 client-side library
   copyright:
     - license: MIT
@@ -74,6 +74,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxcb-dev
 
 update:
   enabled: true
