--- a/ldb.yaml
+++ b/ldb.yaml
@@ -214,6 +214,9 @@ subpackages:
     pipeline:
       - uses: split/manpages
     description: ldb manpages
+    test:
+      pipeline:
+        - uses: test/docs
 
 update:
   enabled: true
