fix typo in description
Signed-off-by: Aditvil-Dev <aditya.tirmanwar@chainguard.dev>

--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -255,7 +255,7 @@ subpackages:
           ln -s /etc/nginx/conf.d/nginx.default.conf ${{targets.subpkgdir}}/etc/nginx/conf.d/default.conf
 
   - name: nginx-bitnami-compat
-    description: "compat package with bitnami/keycloak image"
+    description: "compat package with bitnami/NGINX image"
     dependencies:
       runtime:
         - coreutils
