Add the ldd-check test to libxcvt

--- a/libxcvt.yaml
+++ b/libxcvt.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxcvt
   version: 0.1.3
-  epoch: 0
+  epoch: 1
   description: "VESA CVT standard timing modeline generation library & utility"
   copyright:
     - license: MIT
@@ -32,6 +32,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxcvt-dev
 
   - name: libxcvt-doc
     pipeline:
