Add the ldd-check test to libxml2

--- a/libxml2.yaml
+++ b/libxml2.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxml2
   version: "2.13.6"
-  epoch: 0
+  epoch: 1
   description: XML parsing library, version 2
   copyright:
     - license: MIT
@@ -146,6 +146,9 @@ subpackages:
             gcc -o test test.c $(xml2-config --cflags) $(xml2-config --libs)
             ./test || exit 1
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxml2-dev
 
 update:
   enabled: true
