--- a/libxrender.yaml
+++ b/libxrender.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxrender
   version: 0.9.12
-  epoch: 0
+  epoch: 1
   description: X Rendering Extension client library
   copyright:
     - license: XFree86-1.1
@@ -48,6 +48,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxrender-dev
 
   - name: libxrender-doc
     pipeline:
