--- a/libxshmfence.yaml
+++ b/libxshmfence.yaml
@@ -2,7 +2,7 @@
 package:
   name: libxshmfence
   version: 1.3.3
-  epoch: 0
+  epoch: 1
   description: X11 shared memory fences
   copyright:
     - license: MIT
@@ -48,6 +48,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxshmfence-dev
 
 update:
   enabled: true
