--- a/libxv.yaml
+++ b/libxv.yaml
@@ -1,7 +1,7 @@
 package:
   name: libxv
   version: 1.0.13
-  epoch: 1
+  epoch: 2
   description: "X11 Video extension library"
   copyright:
     - license: MIT
@@ -47,6 +47,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxv-dev
     dependencies:
       runtime:
         - libxv
