--- a/libxxf86vm.yaml
+++ b/libxxf86vm.yaml
@@ -2,7 +2,7 @@
 package:
   name: libxxf86vm
   version: 1.1.6
-  epoch: 0
+  epoch: 1
   description: X11 XFree86 video mode extension library
   copyright:
     - license: MIT
@@ -42,6 +42,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libxxf86vm-dev
 
   - name: libxxf86vm-doc
     pipeline:
