Add the ldd-check test to libyang

--- a/libyang.yaml
+++ b/libyang.yaml
@@ -1,7 +1,7 @@
 package:
   name: libyang
   version: 3.7.8
-  epoch: 0
+  epoch: 1
   description: YANG data modeling language library
   copyright:
     - license: BSD-3-Clause
@@ -49,6 +49,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libyang-dev
 
   - name: libyang-doc
     pipeline:
