added influx as dependency to bitnami compat since helm chart k3s test was throwing error influx not found
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -75,6 +75,7 @@ subpackages:
         - coreutils
         - curl
         - influxd
+        - influx
         - grep
         - libgcc
         - procps
@@ -105,8 +106,8 @@ subpackages:
         accounts:
           users:
             - username: influxdb
-              gid: 1000
-              uid: 1000
+              gid: 0
+              uid: 1001
       pipeline:
         - name: version tests
           runs: |
