Add the ldd-check test to lmdb

--- a/lmdb.yaml
+++ b/lmdb.yaml
@@ -1,7 +1,7 @@
 package:
   name: lmdb
   version: 0.9.31
-  epoch: 3
+  epoch: 4
   description: Lightning Memory-Mapped Database
   copyright:
     - license: OLDAP-2.8
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: lmdb-dev
 
   - name: lmdb-doc
     pipeline:
