--- a/lsof.yaml
+++ b/lsof.yaml
@@ -1,7 +1,7 @@
 package:
   name: lsof
   version: 4.99.4
-  epoch: 1
+  epoch: 2
   description: List Open Files
   copyright:
     - license: lsof
@@ -60,6 +60,11 @@ subpackages:
         - lsof
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: lsof-dev
 
   - name: lsof-doc
     pipeline:
