--- a/lua-luv.yaml
+++ b/lua-luv.yaml
@@ -1,7 +1,7 @@
 package:
   name: lua-luv
   version: "1.50.0.1"
-  epoch: 0
+  epoch: 1
   description: "Bare libuv bindings for Lua"
   copyright:
     - license: Apache-2.0
@@ -60,6 +60,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: lua-luv-dev
 
 update:
   enabled: true
