--- a/luajit.yaml
+++ b/luajit.yaml
@@ -1,7 +1,7 @@
 package:
   name: luajit
   version: 2.1_p20210510
-  epoch: 9
+  epoch: 10
   description: OpenResty's branch of LuaJIT
   copyright:
     - license: MIT
@@ -43,6 +43,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: luajit-dev
 
   - name: luajit-doc
     description: luajit docs
