--- a/cilium-1.17.yaml
+++ b/cilium-1.17.yaml
@@ -1,7 +1,7 @@
 package:
   name: cilium-1.17
   version: "1.17.1"
-  epoch: 20
+  epoch: 21
   description: Cilium is a networking, observability, and security solution with an eBPF-based dataplane
   copyright:
     - license: Apache-2.0
@@ -142,6 +142,25 @@ subpackages:
           ./images/runtime/iptables-wrapper-installer.sh
           mkdir -p ${{targets.subpkgdir}}/usr/bin
           mv /sbin/iptables-wrapper ${{targets.subpkgdir}}/usr/bin/iptables-wrapper
+      - uses: strip
+
+  - name: ${{package.name}}-operator
+    description: All clouds operator for cilium
+    dependencies:
+      runtime:
+        - gops
+      provides:
+        - cilium-operator=${{package.full-version}}
+    pipeline:
+      - runs: |
+          cd /home/build/operator
+          make cilium-operator
+          # NOTE: this requires installing the binary manually as 'install'
+          # target installs all binaries, which we do not want
+          # https://github.com/cilium/cilium/blob/fe05a39/operator/Makefile#L41
+          install -m0755 -d "${{targets.contextdir}}/usr/bin"
+          install -m0755 ./cilium-operator "${{targets.contextdir}}/usr/bin"
+
       - uses: strip
 
   - name: ${{package.name}}-operator-generic
