change subpkgdir to contextdir
Signed-off-by: Rakshit Gondwal <rakshit.gondwal@chainguard.dev>

--- a/kots.yaml
+++ b/kots.yaml
@@ -89,17 +89,17 @@ subpackages:
   - name: kots-compat # adding kots-compat here since we removed the older one and want to avoid breaking anything
     pipeline:
       - runs: |
-          mkdir -p ${{targets.destdir}}/usr/local/bin
+          mkdir -p ${{targets.contextdir}}/usr/local/bin
 
-          # TODO: this is a manual intervention whenever helm releases a new major version
-          ln -s /usr/bin/helm ${{targets.destdir}}/usr/local/bin/helm
-          ln -s /usr/bin/helm ${{targets.destdir}}/usr/local/bin/helm3
+          # NOTE: this is a manual intervention whenever helm releases a new major version
+          ln -s /usr/bin/helm ${{targets.contextdir}}/usr/local/bin/helm
+          ln -s /usr/bin/helm ${{targets.contextdir}}/usr/local/bin/helm3
 
-          # TODO: this is a manual intervention whenever kustomize releases a new major version
-          ln -s /usr/bin/kustomize ${{targets.destdir}}/usr/local/bin/kustomize
-          ln -s /usr/bin/kustomize ${{targets.destdir}}/usr/local/bin/kustomize5
+          # NOTE: this is a manual intervention whenever kustomize releases a new major version
+          ln -s /usr/bin/kustomize ${{targets.contextdir}}/usr/local/bin/kustomize
+          ln -s /usr/bin/kustomize ${{targets.contextdir}}/usr/local/bin/kustomize5
 
-          ln -s /usr/bin/kubectl ${{targets.destdir}}/usr/local/bin/kubectl
+          ln -s /usr/bin/kubectl ${{targets.contextdir}}/usr/local/bin/kubectl
     description: Compatability package for kots
 
 update:
