--- a/clickhouse-25.2.yaml
+++ b/clickhouse-25.2.yaml
@@ -25,12 +25,15 @@ environment:
       - findutils
       - git
       - grep
+      - ini-file
       - libcxx1
       - lld
       - nasm
       - ninja
       - perl
       - python3
+      - shadow
+      - xmlstarlet
       - yasm
 
 pipeline:
@@ -88,6 +91,84 @@ subpackages:
           install -Dm755 ../docker/server/entrypoint.sh ${{targets.subpkgdir}}/entrypoint.sh
           mkdir -p ${{targets.subpkgdir}}/etc/clickhouse-server/config.d/
           cp  ../docker/server/docker_related_config.xml ${{targets.subpkgdir}}/etc/clickhouse-server/config.d/docker_related_config.xml
+
+  - name: ${{package.name}}-bitnami-compat
+    dependencies:
+      provides:
+        - clickhouse-bitnami-compat=${{package.full-version}}
+      runtime:
+        - bash
+        - busybox
+        - coreutils
+        - xmlstarlet
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: clickhouse
+          version-path: 25/debian-12
+      - runs: |
+          set -x
+          mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/etc
+          mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/data
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.d
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/conf.d
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.d
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/bin
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/logs
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/tmp
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/licenses
+          mkdir -p ${{targets.contextdir}}/var/log/clickhouse-server
+
+          mkdir ${{targets.contextdir}}/docker-entrypoint-initdb.d
+          mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
+
+          install -m755 ${{targets.destdir}}/etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
+          install -m755 ${{targets.destdir}}/etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
+          install -m755 ${{targets.destdir}}/etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
+
+          mkdir -p ${{targets.contextdir}}/var/log/
+
+          # Disable some commands used in Bitnami scripts. These commands more likely fail in this since this image take non root approach
+          # sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/continue/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
+          sed -i 's/ensure_user_exists/# ensure_user_exists/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+          # sed -i 's/am_i_root/# am_i_root/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/setup.sh
+
+          # The `--userspec`` flag belongs to GNU's chroot, whereas we are use BusyBox's. As a workaround, use `su-exec` instead.
+          sed -i 's|exec chroot --userspec="$userspec" /|exec chroot / su-exec "$userspec"|' ${{targets.contextdir}}/opt/bitnami/scripts/libos.sh
+          sed -i 's|chroot --userspec="$userspec" /|chroot / su-exec "$userspec"|' ${{targets.contextdir}}/opt/bitnami/scripts/libos.sh
+
+          # Use package path while unpacking
+          find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g' -i {} \;
+          find . -iname "*.sh" -exec sed -i '/chown/c\continue'  -i {} \;
+          find . -iname "*.sh" -exec sed 's#/BITNAMI_VOLUME_DIR="/bitnami"#BITNAMI_VOLUME_DIR="${{targets.contextdir}}/bitnami"#g' -i {} \;
+          find . -iname "*.sh" -exec sed 's#"/bitnami/clickhouse"#"${{targets.contextdir}}/bitnami/clickhouse"#g' -i {} \;
+
+          ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+          # Restore path
+          find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
+
+          # Find all files in /usr/bin that are either named "clickhouse" or symlinks pointing to "clickhouse"
+          for file in /usr/bin/*; do
+              if [ -f "$file" ] && [ "$(basename "$file")" = "clickhouse" ]; then
+                  # Found a direct match for "clickhouse"
+                  ln -sf /usr/bin/clickhouse ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse
+              elif [ -L "$file" ]; then
+                  # Check if the symlink points to clickhouse
+                  target=$(readlink -f "$file")
+                  if [ "$(basename "$target")" = "clickhouse" ]; then
+                      link_name=$(basename "$file")
+                      ln -sf /usr/bin/clickhouse "${{targets.contextdir}}/opt/bitnami/clickhouse/bin/$link_name"
+                  fi
+              fi
+          done
+
+          ln -s /usr/bin/clickhouse-library-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-library-bridge
+          ln -s /usr/bin/clickhouse-odbc-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-odbc-bridge
+          ln -s /dev/stdout ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse.log
+          ln -s /dev/stderr ${{targets.contextdir}}/var/log/clickhouse-server/clickhouse_error.log
+          mkdir -p ${{targets.contextdir}}/var/lib
+          ln -s /bitnami/clickhouse/data ${{targets.contextdir}}/var/lib/clickhouse
 
 update:
   enabled: true
