--- a/openpmix.yaml
+++ b/openpmix.yaml
@@ -1,7 +1,7 @@
 package:
   name: openpmix
   version: 5.0.6
-  epoch: 0
+  epoch: 1
   description: Reference Implementation of the Process Management Interface Exascale (PMIx) standard
   copyright:
     - license: BSD-3-Clause-Open-MPI
@@ -57,6 +57,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: openpmix-dev
 
   - name: openpmix-doc
     description: openpmix manpages
