--- a/mimalloc.yaml
+++ b/mimalloc.yaml
@@ -1,7 +1,7 @@
 package:
   name: mimalloc
   version: "1.9.2"
-  epoch: 0
+  epoch: 1
   description: "A compact general purpose allocator with excellent performance"
   copyright:
     - license: MIT
@@ -35,6 +35,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: mimalloc-dev
     dependencies:
       runtime:
         - mimalloc
