--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -23,8 +23,6 @@ pipeline:
       mkdir -p ${{targets.destdir}}/usr/local/bin
       cp -r ${{targets.destdir}}/usr/bin/nats-server-config-reloader ${{targets.destdir}}/usr/local/bin/nats-server-config-reloader
       chmod 755 ${{targets.destdir}}/usr/local/bin/nats-server-config-reloader
-      cp cicd/assets/entrypoint.sh ${{targets.destdir}}/entrypoint.sh
-      chmod +x ${{targets.destdir}}/entrypoint.sh
 
   - uses: strip
 
@@ -34,7 +32,6 @@ subpackages:
     pipeline:
       - runs: |
           ln -sf /usr/local/bin/nats-server-config-reloader ${{targets.contextdir}}/nats-server-config-reloader
-          ln -sf /usr/local/bin/nats-server-config-reloader /usr/bin/nats-server-config-reloader
     test:
       environment:
         contents:
@@ -42,9 +39,21 @@ subpackages:
             - ${{package.name}}
       pipeline:
         - runs: |
-            stat /nats-server-config-reloader
             /usr/bin/nats-server-config-reloader --help
             /usr/local/bin/nats-server-config-reloader --help
+
+  - name: ${{package.name}}-oci-entrypoint
+    description: Entrypoint for ${{package.name}}
+    pipeline:
+      - runs: |
+          cp cicd/assets/entrypoint.sh ${{targets.contextdir}}/entrypoint.sh
+          chmod +x ${{targets.contextdir}}/entrypoint.sh
+      - uses: strip
+    test:
+      pipeline:
+        - name: "Check expected scripts exist"
+          runs: |
+            stat /entrypoint.sh
 
 update:
   enabled: true
